--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,17 @@ html {
 nav {
     font-size: 16pt;
 }
+
+.mt-6 {
+    margin-top: 1.5rem
+}
+
+@media (min-width: 576px) {
+    .sm\:items-start {
+        align-items: flex-start;
+    }
+
+    .sm\:mt-0 {
+        margin-top: 0;
+    }
+}
