--- a/layouts/partials/author-links.html
+++ b/layouts/partials/author-links.html
@@ -1,6 +1,6 @@
 <!-- Congo default but centered -->
 {{ with .Site.Author.links }}
-  <div class="flex justify-center flex-wrap text-neutral-400 dark:text-neutral-500">
+  <div class="flex mb-2 flex-wrap text-neutral-400 dark:text-neutral-500">
     {{ range $links := . }}
       {{ range $name, $url := $links }}
         <a
