Use new recent work partial

--- a/layouts/partials/home/custom.html
+++ b/layouts/partials/home/custom.html
@@ -30,5 +30,5 @@
     </article>
 </section>
 <section>
-    {{ partial "recent-articles.html" . }}
+    {{ partial "recent-work.html" . }}
 </section>
