--- a/layouts/partials/header/custom.html
+++ b/layouts/partials/header/custom.html
@@ -117,7 +117,7 @@
         </div>
       </label>
       {{/* Basic menu */}}
-      <ul class="hidden list-none flex-row ltr:text-right rtl:text-left sm:flex">
+      <ul class="text-2xl hidden list-none flex-row ltr:text-right rtl:text-left sm:flex">
         {{ if .Site.Menus.main }}
           {{ range .Site.Menus.main }}
             <li class="group mb-1 sm:mb-0 sm:me-7 sm:last:me-0">
