--- a/layouts/partials/home/custom.html
+++ b/layouts/partials/home/custom.html
@@ -19,7 +19,7 @@
           {{ end }}
         </div>
         <div class="mt-6 sm:mt-0">
-          <h2 class="text-2xl font-bold">Tomás Fernandes</h2>
+          <h2 class="text-2xl font-bold">About me</h2>
           <div class="prose">
             {{ .Content | emojify }}
           </div>
@@ -29,3 +29,4 @@
         </div>
     </article>
 </section>
+{{ partial "work-experience.html" . }}
