--- a/themes/tomas/assets/css/main.css
+++ b/themes/tomas/assets/css/main.css
@@ -35,8 +35,14 @@ li {
 }
 
 a {
+    color: #333;
+    text-decoration: underline #00e 2px solid;
+    transition: 0.3s;
+}
+
+a:hover {
     color: #00e;
-    text-decoration: none;
+    text-decoration: underline #00e 2px wavy;
 }
 
 #about {
@@ -74,6 +80,12 @@ article.work-experience {
 
 article.work-experience h3 a {
     color: #333;
+    text-decoration: none;
+}
+
+article.work-experience h3 a:hover {
+    color: #333;
+    text-decoration: underline #00e 2px wavy;
 }
 
 article.work-experience h3:first-child {
