--- a/themes/tomas/assets/css/main.css
+++ b/themes/tomas/assets/css/main.css
@@ -16,6 +16,69 @@ header {
     margin-bottom: 2rem;
 }
 
+header h1 {
+    text-decoration: underline #00e 2px wavy;
+    animation: wave 1s linear infinite;
+    will-change: text-decoration-thickness, text-underline-offset;
+}
+
+@keyframes wave {
+    0% {
+        text-decoration-position: under;
+        text-decoration-thickness: 1px;
+        text-underline-offset: 3px;
+        text-decoration-style: wavy;
+    }
+    12.5% {
+        text-decoration-position: under;
+        text-decoration-thickness: 1.5px;
+        text-underline-offset: 3.5px;
+        text-decoration-style: wavy;
+    }
+    25% {
+        text-decoration-position: under;
+        text-decoration-thickness: 2px;
+        text-underline-offset: 4px;
+        text-decoration-style: wavy;
+    }
+    37.5% {
+        text-decoration-position: under;
+        text-decoration-thickness: 2.5px;
+        text-underline-offset: 4.5px;
+        text-decoration-style: wavy;
+    }
+    50% {
+        text-decoration-position: under;
+        text-decoration-thickness: 3px;
+        text-underline-offset: 5px;
+        text-decoration-style: wavy;
+    }
+    62.5% {
+        text-decoration-position: under;
+        text-decoration-thickness: 2.5px;
+        text-underline-offset: 4.5px;
+        text-decoration-style: wavy;
+    }
+    75% {
+        text-decoration-position: under;
+        text-decoration-thickness: 2px;
+        text-underline-offset: 4px;
+        text-decoration-style: wavy;
+    }
+    87.5% {
+        text-decoration-position: under;
+        text-decoration-thickness: 1.5px;
+        text-underline-offset: 3.5px;
+        text-decoration-style: wavy;
+    }
+    100% {
+        text-decoration-position: under;
+        text-decoration-thickness: 1px;
+        text-underline-offset: 3px;
+        text-decoration-style: wavy;
+    }
+}
+
 h1,
 h2,
 h3,
