--- a/themes/tomas/layouts/partials/head.html
+++ b/themes/tomas/layouts/partials/head.html
@@ -6,10 +6,7 @@
     site.Title }}{{ end }}
 </title>
 {{ partialCached "head/schema.html" . }}
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-    rel="stylesheet"
-/>
+
+<link rel="preload" href="/font/Inter-VariableFont_opsz,wght.ttf" as="font" type="font/ttf" crossorigin>
+
 {{ partialCached "head/css.html" . }} {{ partialCached "head/js.html" . }}
