--- a/themes/tomas/layouts/partials/head.html
+++ b/themes/tomas/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width" />
 <meta name="description" content="{{ .Site.Params.Author.name | safeJS }}" />
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
-{{ partialCached "head/schema.html" . }}
+{{ partial "head/schema.html" . }}
 
 <link rel="preload" href="/font/Inter-VariableFont_opsz,wght.ttf" as="font" type="font/ttf" crossorigin>
 
