--- a/themes/tomas/layouts/partials/footer.html
+++ b/themes/tomas/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-<p>&copy; {{ now.Year }} {{ $.Site.Params.Author.name }}.</p>
+<p>&copy; {{ now.Year }} {{ $.Site.Params.Author.name }} | Routed via {{ getenv "LOCATION" }}</p>
