--- a/themes/tomas/assets/css/main.css
+++ b/themes/tomas/assets/css/main.css
@@ -16,14 +16,39 @@ body {
     padding-right: 1.5rem;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+pre, code {
+    white-space: pre-wrap; 
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;  
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+
+blockquote {
+    font-style: italic;
+    color: #64748b;
+}
+
 header {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 header h1 {
     text-decoration: underline #00e 2.5px wavy;
     text-underline-offset: 3.5px;
+}
+
+header h1 a {
+    text-decoration: none;
+}
+
+header h1 a:hover {
+    text-decoration: none;
 }
 
 h1,
@@ -32,15 +57,12 @@ h3,
 h4,
 h5 {
     font-weight: 500;
+    margin-block-end: 0.25em;
 }
 
 footer {
     margin-top: 1rem;
     color: #64748b;
-}
-
-li {
-    display: inline;
 }
 
 a {
@@ -123,6 +145,37 @@ article.work-experience .meta p {
     margin-top: 0;
     margin-bottom: 0.25rem;
     line-height: 1;
+}
+
+article.post {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+article.post h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+main figure {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-align: center;
+}
+
+main figure img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
+
+figure figcaption {
+    color: #64748b;
 }
 
 @media screen and (min-width: 52rem) {
