--- a/themes/tomas/layouts/_default/home.html
+++ b/themes/tomas/layouts/_default/home.html
@@ -26,8 +26,10 @@
     </div>
 </section>
 
-<h2>Posts</h2>
-Nothing here yet...
+<!-- <h2>Posts</h2>
+{{ range where site.RegularPages "Section" "posts" }}
+    {{ partial "post.html" . }}
+{{ end }} -->
 
 <h2>Work Experience</h2>
 {{ range where site.RegularPages "Section" "work-experience" }}
