Make home page less work-exp centric

--- a/themes/tomas/layouts/_default/home.html
+++ b/themes/tomas/layouts/_default/home.html
@@ -26,13 +26,10 @@
     </div>
 </section>
 
-<!-- <h2>Posts</h2>
-{{ range where site.RegularPages "Section" "posts" }}
+<h2>Posts</h2>
+<i>Work in progress...</i>
+<!-- {{ range where site.RegularPages "Section" "posts" }}
     {{ partial "post.html" . }}
 {{ end }} -->
 
-<h2>Work Experience</h2>
-{{ range where site.RegularPages "Section" "work-experience" }}
-    {{ partial "work-experience.html" . }}
-{{ end }}
 {{ end }}
